# atom

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
extension/: background.js  contentscript.js  manifest.json
resources/: resources.rc  resources.res
src/: app.rs  elements.rs  font.rs  gui.rs  icons.rs  main.rs  messages.rs  style.rs
src/components/: mod.rs
src/components/atom/: mod.rs  update.rs  view.rs
src/components/delete_downloads/: mod.rs
src/components/download/: mod.rs  subscription.rs  update.rs  view.rs
src/components/download_state/: mod.rs
src/components/form/: mod.rs  update.rs  view.rs
src/components/import/: mod.rs  update.rs  view.rs
src/components/keybindings/: mod.rs
src/components/listview_header/: mod.rs
src/components/metadata/: mod.rs  subscription.rs  view.rs
src/components/modal/: mod.rs
src/components/settings/: mod.rs  update.rs  view.rs
src/components/sidebar/: mod.rs  view.rs
src/components/titlebar/: mod.rs
src/style/: button.rs  container.rs  input.rs  mod.rs  progress.rs  slider.rs  toggle.rs
src/utils/: helpers.rs  json_from_browser.rs  mod.rs
