[package]
name = "atom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12", features = ["brotli", "deflate", "gzip"]}
ring = "0.17"
directories = "5"
urlencoding = "2"
rfd = "0.14"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
single-instance = "0.3"
iced = {version="0.12", features=["tokio", "image", "advanced"]}
tray-icon = "0.13"
image = "0.25"
notify-rust = "4"
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["json", "time", "env-filter"]}


[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256
panic = 'unwind'
incremental = true
overflow-checks = true



[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
